--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: eslint
 Section: javascript
 Priority: optional
 Standards-Version: 4.5.0
-Maintainer: Wong Hoi Sing Edison <hswong3i@gmail.com>
+Maintainer: Wong Hoi Sing Edison <hswong3i@pantarei-design.com>
 Homepage: https://github.com/eslint/eslint/tags
 Vcs-Browser: https://github.com/alvistack/eslint-eslint
 Vcs-Git: https://github.com/alvistack/eslint-eslint.git
